Test/Fixture/BlockMigration/InvalidData/BlockMigrationInvalidDataBlockRolePermissionFixture.php
<?php
/**
 * BlockMigrationInvalidDataBlockRolePermissionFixture
 *
 * @copyright Copyright 2014, NetCommons Project
 * @author Kohei Teraguchi <kteraguchi@commonsnet.org>
 * @link http://www.netcommons.org NetCommons Project
 * @license http://www.netcommons.org/license.txt NetCommons License
 */

App::uses('BlockMigrationNoDataBlockRolePermissionFixture', 'Calendars.Test/Fixture/BlockMigration/NoData');

/**
 * BlockMigrationInvalidDataBlockRolePermissionFixture
 *
 */
class BlockMigrationInvalidDataBlockRolePermissionFixture extends BlockMigrationNoDataBlockRolePermissionFixture {

/**
 * Fixture records to be inserted.
 *
 * @var array
 */
	//public $records = [];

}
